--- a/scss/_pagetoc.scss
+++ b/scss/_pagetoc.scss
@@ -1,13 +1,12 @@
-@use 'global.scss' as gbl;
-@use 'theme/variables' as var;
+@use 'variables' as var;
 
-@media only screen and (max-width: gbl.$mobile-max-width) {
+@media only screen and (max-width: var.$mobile-max-width) {
   .sidetoc {
     display: none;
   }
 }
 
-@media only screen and (min-width: gbl.$mobile-max-width) {
+@media only screen and (min-width: var.$mobile-max-width) {
   main {
     position: relative;
   }
