--- a/scss/theme/chrome.scss
+++ b/scss/theme/chrome.scss
@@ -1,4 +1,4 @@
-@use 'variables' as var;
+@use '../variables' as var;
 
 // CSS for UI elements (a.k.a. chrome)
 
@@ -202,11 +202,12 @@ a > .hljs {
 
 // Inline code
 
-:not(pre) > .hljs {
-  display: inline;
-  padding: 0.1em 0.3em;
-  border-radius: 3px;
-
+:not(pre) {
+  & > .hljs {
+    display: inline;
+    padding: 0.1em 0.3em;
+    border-radius: 3px;
+  }
   &:not(a) > .hljs {
     color: var(--inline-code-color);
     overflow-x: initial;
