fmt with prettier

--- a/scss/_pagetoc.scss
+++ b/scss/_pagetoc.scss
@@ -50,7 +50,9 @@
       &.H3 {
         padding-left: 30px;
       }
-      &.H4, &.H5, &.H6 {
+      &.H4,
+      &.H5,
+      &.H6 {
         padding-left: 40px;
       }
     }
