--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -4,5 +4,5 @@ $page-padding: 15px;
 $sidebar-width: 200px;
 $menu-bar-height: 50px;
 $content-max-width: 770px;
-$mono-font: "HackGen35 Console NF", "Source Code Pro", Consolas, "Ubuntu Mono", Menlo, "DejaVu Sans Mono", monospace;
+$mono-font: 'HackGen35 Console NF', 'Source Code Pro', Consolas, 'Ubuntu Mono', Menlo, 'DejaVu Sans Mono', monospace;
 $code-font-size: 0.75em; // please adjust the ace font size accordingly in editor.js
