--- a/scss/_headline.scss
+++ b/scss/_headline.scss
@@ -1,17 +1,19 @@
-h1, h2 {
+h1,
+h2 {
   border-bottom: solid 3px #ffb2cc;
   font-style: italic;
 
   &:after {
     position: absolute;
-    content: " ";
+    content: ' ';
     display: block;
     border-bottom: solid 3px #dcb7f1;
     width: 10%;
   }
 }
 
-h3, h4 {
+h3,
+h4 {
   border-bottom: solid 1px #ffb2cc;
   font-style: italic;
 }
