fmt with EditorConfig

--- a/scss/fonts/fonts.scss
+++ b/scss/fonts/fonts.scss
@@ -8,8 +8,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 300;
-  src: local('Open Sans Light'), local('OpenSans-Light'),
-    url('open-sans-v17-all-charsets-300.woff2') format('woff2');
+  src: local('Open Sans Light'), local('OpenSans-Light'), url('open-sans-v17-all-charsets-300.woff2') format('woff2');
   font-display: swap;
 }
 
@@ -68,8 +67,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
-  src: local('Open Sans Bold'), local('OpenSans-Bold'),
-    url('open-sans-v17-all-charsets-700.woff2') format('woff2');
+  src: local('Open Sans Bold'), local('OpenSans-Bold'), url('open-sans-v17-all-charsets-700.woff2') format('woff2');
   font-display: swap;
 }
 
