--- a/scss/theme/general.scss
+++ b/scss/theme/general.scss
@@ -45,7 +45,7 @@ h6 {
   code {
     font-size: unset;
   }
-  target {
+  &:target {
     &::before {
       display: inline-block;
       content: '»';
