chore: style correction

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -3,6 +3,6 @@ $mobile-max-width: 850px;
 $page-padding: 15px;
 $sidebar-width: 200px;
 $menu-bar-height: 50px;
-$content-max-width: 770px;
+$content-max-width: 100rem;
 $mono-font: 'HackGen35 Console NF', 'Source Code Pro', Consolas, 'Ubuntu Mono', Menlo, 'DejaVu Sans Mono', monospace;
-$code-font-size: 0.75em; // please adjust the ace font size accordingly in editor.js
+$code-font-size: 0.85em; // please adjust the ace font size accordingly in editor.js
