Adjust the balance of the entire page.

--- a/scss/_pagetoc.scss
+++ b/scss/_pagetoc.scss
@@ -1,24 +1,24 @@
 @use 'variables' as var;
 
-@media only screen and (max-width: var.$mobile-max-width) {
+@media only screen and (max-width: var.$enable-pagetoc) {
   .sidetoc {
     display: none;
   }
 }
 
-@media only screen and (min-width: var.$mobile-max-width) {
+@media only screen and (min-width: var.$enable-pagetoc) {
   main {
     position: relative;
   }
   .sidetoc {
     margin-left: auto;
     margin-right: auto;
-    left: calc(100% + var.$content-max-width / 4 - 170px);
+    left: calc(var.$content-max-width + 2rem);
     position: absolute;
   }
   .pagetoc {
     position: fixed;
-    width: 15vw;
+    width: var.$pagetoc-width;
     overflow: auto;
     font-size: 0.8em;
     font-style: italic;
