--- a/scss/theme/chrome.scss
+++ b/scss/theme/chrome.scss
@@ -281,13 +281,12 @@ mark {
 }
 
 .searchbar-outer {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: var.$content-max-width;
+  margin: auto;
+  max-width: var.$searchbar-max-width;
 }
 
 #searchbar {
-  width: 100%;
+  width: 90%;
   margin: 5px auto 0px auto;
   padding: 10px 16px;
   transition: box-shadow 300ms ease-in-out;
@@ -309,9 +308,8 @@ mark {
 }
 
 .searchresults-outer {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: var.$content-max-width;
+  margin: auto;
+  max-width: var.$searchbar-max-width;
   border-bottom: 1px dashed var(--searchresults-border-color);
   font-size: 1.3em;
 }
