--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -2,7 +2,11 @@ $mobile-max-width: 850px;
 
 $page-padding: 15px;
 $sidebar-width: 200px;
+$pagetoc-width: 240px;
+$enable-pagetoc: $mobile-max-width + $sidebar-width + $pagetoc-width;
+
 $menu-bar-height: 50px;
 $content-max-width: 100rem;
+$searchbar-max-width: 100rem;
 $mono-font: 'HackGen35 Console NF', 'Source Code Pro', Consolas, 'Ubuntu Mono', Menlo, 'DejaVu Sans Mono', monospace;
 $code-font-size: 0.85em; // please adjust the ace font size accordingly in editor.js
