--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,12 +1,12 @@
-$mobile-max-width: 850px;
+$mobile-max-width: 760px;
 
 $page-padding: 15px;
 $sidebar-width: 200px;
-$pagetoc-width: 240px;
-$enable-pagetoc: $mobile-max-width + $sidebar-width + $pagetoc-width;
+$pagetoc-width: 170px;
+$enable-pagetoc: $mobile-max-width + $pagetoc-width;
 
 $menu-bar-height: 50px;
-$content-max-width: 100rem;
+$content-max-width: 75rem;
 $searchbar-max-width: 100rem;
 $mono-font: 'HackGen35 Console NF', 'Source Code Pro', Consolas, 'Ubuntu Mono', Menlo, 'DejaVu Sans Mono', monospace;
 $code-font-size: 0.85em; // please adjust the ace font size accordingly in editor.js
