Fixed the display of the search bar.

--- a/scss/theme/chrome.scss
+++ b/scss/theme/chrome.scss
@@ -286,12 +286,13 @@ mark {
 }
 
 #searchbar {
+  display: block;
   width: 90%;
-  margin: 5px auto 0px auto;
+  margin: 20px auto;
   padding: 10px 16px;
   transition: box-shadow 300ms ease-in-out;
   border: 1px solid var(--searchbar-border-color);
-  border-radius: 3px;
+  border-radius: 20px;
   background-color: var(--searchbar-bg);
   color: var(--searchbar-fg);
 
