--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -10,3 +10,6 @@ $content-max-width: 75rem;
 $searchbar-max-width: 100rem;
 $mono-font: 'HackGen35 Console NF', 'Source Code Pro', Consolas, 'Ubuntu Mono', Menlo, 'DejaVu Sans Mono', monospace;
 $code-font-size: 0.85em; // please adjust the ace font size accordingly in editor.js
+
+$color-pink: #ffb2cc;
+$color-purple: #dcb7f1;
