--- a/scss/_headline.scss
+++ b/scss/_headline.scss
@@ -1,19 +1,21 @@
+@use 'variables' as var;
+
 h1,
 h2 {
-  border-bottom: solid 3px #ffb2cc;
+  border-bottom: solid 3px var.$color_pink;
   font-style: italic;
 
   &:after {
     position: absolute;
     content: ' ';
     display: block;
-    border-bottom: solid 3px #dcb7f1;
+    border-bottom: solid 3px var.$color_purple;
     width: 10%;
   }
 }
 
 h3,
 h4 {
-  border-bottom: solid 1px #ffb2cc;
+  border-bottom: solid 1px var.$color_pink;
   font-style: italic;
 }
