--- a/scss/theme/chrome.scss
+++ b/scss/theme/chrome.scss
@@ -449,7 +449,7 @@ ul {
       color: var(--sidebar-fg);
       margin: 12px auto 0px;
       font-weight: bold;
-      border-bottom: solid 1px #ffb2cc;
+      border-bottom: solid 1px var.$color_pink;
     }
 
     &.expanded > a.toggle div {
