Set up a web container regarding google tag manager.

--- a/theme/head.hbs
+++ b/theme/head.hbs
@@ -1,8 +1,5 @@
-<meta name="google-site-verification" content="I2IiJw92-ns-i89-BauWRWbONmTxkGU0LuMpMEI3E2I" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GRHGDF4JZV"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-GRHGDF4JZV');
-</script>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WMN96QT');</script>
