Replace the font on your PC (or Tablet) device. Switch from `白源(HackGen)` to `ryanoasis/nerd-fonts`
Even though it was intended for PC/Tablet only, the file size was too large.

There is nothing better than selecting only what you need,
but just doing this has greatly improved the file size.

--- a/scss/fonts/fonts.scss
+++ b/scss/fonts/fonts.scss
@@ -112,13 +112,13 @@
   }
 }
 
-/* HackGen35  */
+/* source-code-pro-nerd-font  */
 @media only screen and (min-width: var.$mobile-max-width) {
   @font-face {
-    font-family: 'HackGen35 Console NF';
+    font-family: 'SauceCodePro NF';
     font-style: normal;
-    font-weight: 300;
-    src: url('HackGen/HackGen35ConsoleNF-Regular.woff2') format('woff2');
+    font-weight: 500;
+    src: url('SauceCodePro/Sauce Code Pro Medium Nerd Font Complete.woff2') format('woff2');
     font-display: swap;
   }
 }
