--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -7,7 +7,7 @@ $enable-pagetoc: $mobile-max-width + $pagetoc-width;
 $menu-bar-height: 50px;
 $content-max-width: 75rem;
 $searchbar-max-width: 100rem;
-$mono-font: 'HackGen35 Console NF', 'Source Code Pro', Consolas, 'Ubuntu Mono', Menlo, 'DejaVu Sans Mono', monospace;
+$mono-font: 'SauceCodePro NF', 'Source Code Pro', Consolas, 'Ubuntu Mono', Menlo, 'DejaVu Sans Mono', monospace;
 $code-font-size: 0.85em; // please adjust the ace font size accordingly in editor.js
 
 $color-pink: #ffb2cc;
