--- a/scss/_mdbook-admonish.scss
+++ b/scss/_mdbook-admonish.scss
@@ -99,11 +99,11 @@ html :is(.admonition-title, summary):last-child {
   height: 2rem;
   background-color: #448aff;
   mask-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"></svg>');
-  -webkit-mask-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"></svg>');
+  //-webkit-mask-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"></svg>');
   mask-repeat: no-repeat;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
   mask-size: contain;
-  -webkit-mask-size: contain;
+  //-webkit-mask-size: contain;
   content: "";
 }
 :is(.admonition-title, summary):hover a.admonition-anchor-link {
@@ -118,11 +118,11 @@ details.admonition > summary.admonition-title::after {
   width: 2rem;
   background-color: currentcolor;
   mask-image: var(--md-details-icon);
-  -webkit-mask-image: var(--md-details-icon);
+  //-webkit-mask-image: var(--md-details-icon);
   mask-repeat: no-repeat;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
   mask-size: contain;
-  -webkit-mask-size: contain;
+  //-webkit-mask-size: contain;
   content: "";
   transform: rotate(0deg);
   transition: transform 0.25s;
@@ -141,11 +141,11 @@ details[open].admonition > summary.admonition-title::after {
 :is(.note) > :is(.admonition-title, summary)::before {
   background-color: #448aff;
   mask-image: var(--md-admonition-icon--note);
-  -webkit-mask-image: var(--md-admonition-icon--note);
+  //-webkit-mask-image: var(--md-admonition-icon--note);
   mask-repeat: no-repeat;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
   mask-size: contain;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
 }
 
 :is(.admonition):is(.abstract, .summary, .tldr) {
@@ -158,11 +158,11 @@ details[open].admonition > summary.admonition-title::after {
 :is(.abstract, .summary, .tldr) > :is(.admonition-title, summary)::before {
   background-color: #00b0ff;
   mask-image: var(--md-admonition-icon--abstract);
-  -webkit-mask-image: var(--md-admonition-icon--abstract);
+  //-webkit-mask-image: var(--md-admonition-icon--abstract);
   mask-repeat: no-repeat;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
   mask-size: contain;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
 }
 
 :is(.admonition):is(.info, .todo) {
@@ -175,11 +175,11 @@ details[open].admonition > summary.admonition-title::after {
 :is(.info, .todo) > :is(.admonition-title, summary)::before {
   background-color: #00b8d4;
   mask-image: var(--md-admonition-icon--info);
-  -webkit-mask-image: var(--md-admonition-icon--info);
+  //-webkit-mask-image: var(--md-admonition-icon--info);
   mask-repeat: no-repeat;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
   mask-size: contain;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
 }
 
 :is(.admonition):is(.tip, .hint, .important) {
@@ -192,11 +192,11 @@ details[open].admonition > summary.admonition-title::after {
 :is(.tip, .hint, .important) > :is(.admonition-title, summary)::before {
   background-color: #00bfa5;
   mask-image: var(--md-admonition-icon--tip);
-  -webkit-mask-image: var(--md-admonition-icon--tip);
+  //-webkit-mask-image: var(--md-admonition-icon--tip);
   mask-repeat: no-repeat;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
   mask-size: contain;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
 }
 
 :is(.admonition):is(.success, .check, .done) {
@@ -209,11 +209,11 @@ details[open].admonition > summary.admonition-title::after {
 :is(.success, .check, .done) > :is(.admonition-title, summary)::before {
   background-color: #00c853;
   mask-image: var(--md-admonition-icon--success);
-  -webkit-mask-image: var(--md-admonition-icon--success);
+  //-webkit-mask-image: var(--md-admonition-icon--success);
   mask-repeat: no-repeat;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
   mask-size: contain;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
 }
 
 :is(.admonition):is(.question, .help, .faq) {
@@ -226,11 +226,11 @@ details[open].admonition > summary.admonition-title::after {
 :is(.question, .help, .faq) > :is(.admonition-title, summary)::before {
   background-color: #64dd17;
   mask-image: var(--md-admonition-icon--question);
-  -webkit-mask-image: var(--md-admonition-icon--question);
+  //-webkit-mask-image: var(--md-admonition-icon--question);
   mask-repeat: no-repeat;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
   mask-size: contain;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
 }
 
 :is(.admonition):is(.warning, .caution, .attention) {
@@ -243,11 +243,11 @@ details[open].admonition > summary.admonition-title::after {
 :is(.warning, .caution, .attention) > :is(.admonition-title, summary)::before {
   background-color: #ff9100;
   mask-image: var(--md-admonition-icon--warning);
-  -webkit-mask-image: var(--md-admonition-icon--warning);
+  //-webkit-mask-image: var(--md-admonition-icon--warning);
   mask-repeat: no-repeat;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
   mask-size: contain;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
 }
 
 :is(.admonition):is(.failure, .fail, .missing) {
@@ -260,11 +260,11 @@ details[open].admonition > summary.admonition-title::after {
 :is(.failure, .fail, .missing) > :is(.admonition-title, summary)::before {
   background-color: #ff5252;
   mask-image: var(--md-admonition-icon--failure);
-  -webkit-mask-image: var(--md-admonition-icon--failure);
+  //-webkit-mask-image: var(--md-admonition-icon--failure);
   mask-repeat: no-repeat;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
   mask-size: contain;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
 }
 
 :is(.admonition):is(.danger, .error) {
@@ -277,11 +277,11 @@ details[open].admonition > summary.admonition-title::after {
 :is(.danger, .error) > :is(.admonition-title, summary)::before {
   background-color: #ff1744;
   mask-image: var(--md-admonition-icon--danger);
-  -webkit-mask-image: var(--md-admonition-icon--danger);
+  //-webkit-mask-image: var(--md-admonition-icon--danger);
   mask-repeat: no-repeat;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
   mask-size: contain;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
 }
 
 :is(.admonition):is(.bug) {
@@ -294,11 +294,11 @@ details[open].admonition > summary.admonition-title::after {
 :is(.bug) > :is(.admonition-title, summary)::before {
   background-color: #f50057;
   mask-image: var(--md-admonition-icon--bug);
-  -webkit-mask-image: var(--md-admonition-icon--bug);
+  //-webkit-mask-image: var(--md-admonition-icon--bug);
   mask-repeat: no-repeat;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
   mask-size: contain;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
 }
 
 :is(.admonition):is(.example) {
@@ -311,11 +311,11 @@ details[open].admonition > summary.admonition-title::after {
 :is(.example) > :is(.admonition-title, summary)::before {
   background-color: #7c4dff;
   mask-image: var(--md-admonition-icon--example);
-  -webkit-mask-image: var(--md-admonition-icon--example);
+  //-webkit-mask-image: var(--md-admonition-icon--example);
   mask-repeat: no-repeat;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
   mask-size: contain;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
 }
 
 :is(.admonition):is(.quote, .cite) {
@@ -328,11 +328,11 @@ details[open].admonition > summary.admonition-title::after {
 :is(.quote, .cite) > :is(.admonition-title, summary)::before {
   background-color: #9e9e9e;
   mask-image: var(--md-admonition-icon--quote);
-  -webkit-mask-image: var(--md-admonition-icon--quote);
+  //-webkit-mask-image: var(--md-admonition-icon--quote);
   mask-repeat: no-repeat;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
   mask-size: contain;
-  -webkit-mask-repeat: no-repeat;
+  //-webkit-mask-repeat: no-repeat;
 }
 
 .admonition-anchor-link:link, .admonition-anchor-link:visited {
