--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -21,24 +21,24 @@
     {{#if favicon_png}}
     <link rel="shortcut icon" href="{{ path_to_root }}favicon.png">
     {{/if}}
+
     <link rel="stylesheet" href="{{ path_to_root }}css/general.css">
     <link rel="stylesheet" href="{{ path_to_root }}css/chrome.css">
+
     {{#if print_enable}}
     <link rel="stylesheet" href="{{ path_to_root }}css/print.css" media="print">
     {{/if}}
 
     <!-- Fonts -->
-    {{#if copy_fonts}}
     <link rel="stylesheet" href="{{ path_to_root }}fonts/fonts.css">
-    {{/if}}
 
     <!-- Custom theme stylesheets -->
     {{#each additional_css}}
     <link rel="stylesheet" href="{{ ../path_to_root }}{{ this }}" async>
     {{/each}}
 
-    {{#if mathjax_support}}
     <!-- MathJax -->
+    {{#if mathjax_support}}
     <script async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     {{/if}}
   </head>
@@ -46,7 +46,6 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMN96QT"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
 
     <!-- Provide site root to javascript -->
     <script>
@@ -162,44 +161,16 @@
       </div>
     </div>
 
-    {{#if live_reload_endpoint}}
-    <!-- Livereload script (if served using the cli tool) -->
-    <script>
-      const wsProtocol = location.protocol === 'https:' ? 'wss:' : 'ws:';
-      const wsAddress = wsProtocol + "//" + location.host + "/" + "{{{live_reload_endpoint}}}";
-      const socket = new WebSocket(wsAddress);
-      socket.onmessage = function (event) {
-        if (event.data === "reload") {
-          socket.close();
-          location.reload();
-        }
-      };
-
-      window.onbeforeunload = function() {
-        socket.close();
-      }
-    </script>
-    {{/if}}
-
-    {{#if playground_line_numbers}}
-    <script>
-      window.playground_line_numbers = true;
-    </script>
-    {{/if}}
-
-    {{#if playground_copyable}}
-    <script>
-      window.playground_copyable = true;
-    </script>
-    {{/if}}
-
     {{#if search_js}}
     <script src="{{ path_to_root }}elasticlunr.min.js"></script>
-    <script src="{{ path_to_root }}mark.min.js"></script>
+    <script src="{{ path_to_root }}mark.es6.min.js"></script>-
     <script src="{{ path_to_root }}searcher.js"></script>
     {{/if}}
 
+    {{#if playground_copyable}}
     <script src="{{ path_to_root }}clipboard.min.js"></script>
+    <script>window.playground_copyable = true;</script>
+    {{/if}}
 
     <script src="{{ path_to_root }}highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
