Overall modification and optimization.
js:
  No longer need to suppress warnings emitted by `highlighting.js`
  Removed `JS` variables present in the `HTML` root
  Removed unnecessary code

scss:
  Fixed issue with `theme-color` not working properly
  Fixed warning in `highlighting.js`

index.hbs:
  removed `JS` variables from `HTML` root
  added various `<meta>` properties

--- a/scss/theme/general.scss
+++ b/scss/theme/general.scss
@@ -1,13 +1,12 @@
 @use '../variables' as var;
 
 // Base styles and content styles
-
 :root {
   // Browser default font-size is 16px, this way 1 rem = 10px
   font-size: 64%;
 }
 
-html {
+body {
   font-family: 'Open Sans', sans-serif;
   color: var(--fg);
   background-color: var(--bg);
