Adjusting headline style.

--- a/scss/_pagetoc.scss
+++ b/scss/_pagetoc.scss
@@ -56,10 +56,14 @@
       &.H3 {
         padding-left: 30px;
       }
-      &.H4,
-      &.H5,
-      &.H6 {
+      &.H4 {
+        padding-left: 35px;
+      }
+      &.H5 {
         padding-left: 40px;
+      }
+      &.H6 {
+        padding-left: 45px;
       }
     }
   }
