--- a/scss/_headline.scss
+++ b/scss/_headline.scss
@@ -19,3 +19,11 @@ h4 {
   border-bottom: solid 1px var.$color_pink;
   font-style: italic;
 }
+
+h5,
+h6 {
+  font-size: 0.83em;
+  font-weight: bold;
+  border-bottom: solid 1px var.$color_purple;
+  font-style: italic;
+}
