--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,11 +1,13 @@
 $mobile-max-width: 680px;
 
+$basis-content: 100%;
+$basis-headtoc: 20%;
+
 $sidebar-width: 200px;
 $pagetoc-width: 200px;
 $enable-pagetoc: $mobile-max-width + $pagetoc-width;
 
 $menu-bar-height: 50px;
-$content-max-width: 75rem;
 $searchbar-max-width: 100rem;
 $mono-font: 'SauceCodePro NF', 'Source Code Pro', Consolas, 'Ubuntu Mono', Menlo, 'DejaVu Sans Mono', monospace;
 $code-font-size: 0.85em; // please adjust the ace font size accordingly in editor.js
