--- a/scss/theme/chrome.scss
+++ b/scss/theme/chrome.scss
@@ -10,6 +10,10 @@ a > .hljs {
   color: var(--links);
 }
 
+#body-container {
+  overflow-x: hidden;
+}
+
 #menu-bar {
   position: relative;
   display: flex;
